# slack-tooy

./: Cargo.toml  README.md
src/: action.rs  app.rs  config.rs  download.rs  emoji.rs  event.rs  logging.rs  main.rs  store.rs  tui.rs  ui.rs
src/components/: input.rs  messages.rs  mod.rs  sidebar.rs
src/slack/: client.rs  mod.rs  types.rs
